Adds featured section, isotope, fixes footer section, and adds copyright.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>The Tech Toybox | Create. Build. Learn.</title>
+        <link rel="shortcut icon" href="/static/images/logofavicon_0.png" type="image/png" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 
         <link rel="stylesheet" href="/static/main.css">
     </head>
@@ -20,7 +19,7 @@
       					<div class="col-sm-9">
       						<ul class="info-left reset-list">
       							<li><span class="glyphicon glyphicon-map-marker"></span> 2153 SE Hawthorne Rd Gainesville, FL</li>
-      							<li><span class="glyphicon glyphicon-earphone"></span> 352-474-8802</li>
+      							<li><span class="glyphicon glyphicon-earphone"></span> <a href="tel:13524748802">352-474-8802</a></li>
       						</ul>
       					</div>
       					<div class="col-sm-3">
@@ -119,13 +118,11 @@
                 <ol class="carousel-indicators">
                   <li data-target="#carousel" data-slide-to="0" class="active"></li>
                   <li data-target="#carousel" data-slide-to="1"></li>
-                  <!-- <li data-target="#carousel" data-slide-to="2"></li> -->
                 </ol>
 
                 <div class="carousel-inner" role="listbox">
                   <div class="item active">
                     <img src="/static/images/stock1.jpg" alt="" class="img-responsive">
-                    <!-- <img src="/static/images/transparent.png" alt="" class="carousel-img img-responsive" style="background-image: url(/static/images/stock1.jpg)"> -->
                     <div class="carousel-caption">
                       Launch your idea from ground zero.
                     </div>
@@ -181,7 +178,82 @@
                   <h2>Featured Clients</h2>
                   <h4 class="subtitle">We're proud of all of our projects!</h4>
                 </div>
-                <div class="col-sm-6"></div>
+                <div class="col-sm-6">
+                  <div class="grid-buttons btn-group" role="group">
+                    <button data-filter="*" type="button" class="btn btn-default active">All</button>
+                    <button data-filter="robots" type="button" class="btn btn-default">Robots</button>
+                    <button data-filter="machinery" type="button" class="btn btn-default">Machinery</button>
+                    <button data-filter="nature" type="button" class="btn btn-default">Nature</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="featured-grid grid grid-slim clearfix">
+            <div class="grid-item nature">
+              <a href="#">
+                <img src="/static/images/grid/1.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Hydro Project
+                </div>
+              </a>
+            </div>
+            <div class="grid-item machinery">
+              <a href="#">
+                <img src="/static/images/grid/2.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Electron collider
+                </div>
+              </a>
+            </div>
+            <div class="grid-item robots">
+              <a href="#">
+                <img src="/static/images/grid/3.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  R3D3
+                </div>
+              </a>
+            </div>
+            <div class="grid-item robots">
+              <a href="#">
+                <img src="/static/images/grid/4.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Wally Pocket
+                </div>
+              </a>
+            </div>
+            <div class="grid-item machinery">
+              <a href="#">
+                <img src="/static/images/grid/5.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Engine Thingie
+                </div>
+              </a>
+            </div>
+            <div class="grid-item machinery">
+              <a href="#">
+                <img src="/static/images/grid/6.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Steamer
+                </div>
+              </a>
+            </div>
+            <div class="grid-item nature">
+              <a href="#">
+                <img src="/static/images/grid/7.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Space Cadet Helmet
+                </div>
+              </a>
+            </div>
+            <div class="grid-item machinery">
+              <a href="#">
+                <img src="/static/images/grid/8.jpg" class="img-responsive">
+                <div class="grid-item-caption">
+                  Motorcycle 2500cc Engine
+                </div>
+              </a>
             </div>
           </section>
 
@@ -190,7 +262,7 @@
               <div class="row">
                 <div class="col-sm-4">
                   <h2>The Tech Toybox</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>2153 SE Hawthorne Road<br>Gainesville, FL 32641</p>
                   <ul class="list-inline social-icons">
                     <li class="twitter">
       								<a href="#" target="_blank">
@@ -219,9 +291,42 @@
       							</li>
                   </ul>
                 </div>
+                <div class="col-sm-4 recent-articles">
+                  <h3>Recent Articles</h3>
+                  <ul class="media-list">
+                    <li class="media">
+                      <div class="media-left">
+                        <a href="#">
+                          <img class="media-object img-responsive" src="/static/images/media_0.jpg" alt="A Night of Progress">
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading">A Night of Progress</h4>
+                        <p>Join us tonight, Oct 30th from 5-8pm for a great night out filled with food, fun and awesomness!</p>
+                        <div class="media-date">June 22, 2015</div>
+                      </div>
+                    </li>
+                    <li class="media">
+                      <div class="media-left">
+                        <a href="#">
+                          <img class="media-object img-responsive" src="/static/images/media_1.jpg" alt="Open House with Reichert House">
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading">Open House with Reichert House</h4>
+                        <p>Twenty enthusiastic Reichert House youth raided the Toybox last week, and it was all kinds of awesome!</p>
+                        <div class="media-date">June 22, 2015</div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </footer>
+
+          <div id="copyright" class="text-center">
+            Copyright &copy; 2016. All Rights Reserved.
+          </div>
         </main>
       </div>
 
