--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   <h4 class="subtitle">We're proud of all of our projects!</h4>
                 </div>
                 <div class="col-sm-6">
-                  <div class="grid-buttons btn-group" role="group">
+                  <div class="grid-buttons btn-group hidden" role="group">
                     <button data-filter="*" type="button" class="btn btn-default active">All</button>
                     <button data-filter="robots" type="button" class="btn btn-default">Robots</button>
                     <button data-filter="machinery" type="button" class="btn btn-default">Machinery</button>
@@ -190,70 +190,72 @@
             </div>
           </section>
 
-          <section class="featured-grid grid grid-slim clearfix">
-            <div class="grid-item nature">
-              <a href="#">
-                <img src="/static/images/grid/1.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Hydro Project
-                </div>
-              </a>
-            </div>
-            <div class="grid-item machinery">
-              <a href="#">
-                <img src="/static/images/grid/2.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Electron collider
-                </div>
-              </a>
-            </div>
-            <div class="grid-item robots">
-              <a href="#">
-                <img src="/static/images/grid/3.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  R3D3
-                </div>
-              </a>
-            </div>
-            <div class="grid-item robots">
-              <a href="#">
-                <img src="/static/images/grid/4.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Wally Pocket
-                </div>
-              </a>
-            </div>
-            <div class="grid-item machinery">
-              <a href="#">
-                <img src="/static/images/grid/5.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Engine Thingie
-                </div>
-              </a>
-            </div>
-            <div class="grid-item machinery">
-              <a href="#">
-                <img src="/static/images/grid/6.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Steamer
-                </div>
-              </a>
-            </div>
-            <div class="grid-item nature">
-              <a href="#">
-                <img src="/static/images/grid/7.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Space Cadet Helmet
-                </div>
-              </a>
-            </div>
-            <div class="grid-item machinery">
-              <a href="#">
-                <img src="/static/images/grid/8.jpg" class="img-responsive">
-                <div class="grid-item-caption">
-                  Motorcycle 2500cc Engine
-                </div>
-              </a>
+          <section class="featured-grid grid-slim clearfix">
+            <div class="grid">
+              <div class="grid-item nature">
+                <a href="#">
+                  <img src="/static/images/grid/1.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Hydro Project
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item machinery">
+                <a href="#">
+                  <img src="/static/images/grid/2.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Electron collider
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item robots">
+                <a href="#">
+                  <img src="/static/images/grid/3.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    R3D3
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item robots">
+                <a href="#">
+                  <img src="/static/images/grid/4.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Wally Pocket
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item machinery">
+                <a href="#">
+                  <img src="/static/images/grid/5.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Engine Thingie
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item machinery">
+                <a href="#">
+                  <img src="/static/images/grid/6.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Steamer
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item nature">
+                <a href="#">
+                  <img src="/static/images/grid/7.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Space Cadet Helmet
+                  </div>
+                </a>
+              </div>
+              <div class="grid-item machinery">
+                <a href="#">
+                  <img src="/static/images/grid/8.jpg" class="img-responsive">
+                  <div class="grid-item-caption">
+                    Motorcycle 2500cc Engine
+                  </div>
+                </a>
+              </div>
             </div>
           </section>
 
